ffi/cbuilder/jtalkbcc.h

typedef struct HtsVoiceFilelist_t {
	struct HtsVoiceFilelist_t *succ;
	char *path;
	char *name;
} HtsVoiceFilelist;
	HtsVoiceFilelist* WINAPI __declspec(dllexport) openjtalk_getHTSVoiceListSjis(void *openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_clearHTSVoiceList(void*openjtalk, HtsVoiceFilelist*list);
	void* WINAPI __declspec(dllexport) openjtalk_initializeU16(wchar_t*voice,wchar_t*dic,wchar_t*voiceDir);
	void WINAPI __declspec(dllexport) openjtalk_clear(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_refresh(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setFperiod(void*openjtalk,size_t i);
	size_t WINAPI __declspec(dllexport) openjtalk_getFperiod(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setSamplingFrequency(void*openjtalk, size_t i);
	size_t WINAPI __declspec(dllexport) openjtalk_getSamplingFrequency(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setAdditionalHalfTone(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getAdditionalHalfTone(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setAlpha(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getAlpha(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setBeta(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getBeta(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setGvWeightForLogF0(void*openjtalk, double f);
	double WINAPI __declspec(dllexport) openjtalk_getGvWeightForLogF0(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setGvWeightForSpectrum(void*openjtalk, double f);
	double WINAPI __declspec(dllexport) openjtalk_getGvWeightForSpectrum(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setMsdThreshold(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getMsdThreshold(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setSpeed(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getSpeed(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_setVolume(void*openjtalk,double f);
	double WINAPI __declspec(dllexport) openjtalk_getVolume(void*openjtalk);
   	bool WINAPI __declspec(dllexport) openjtalk_setDicU16(void*openjtalk,wchar_t* path);
	wchar_t* WINAPI __declspec(dllexport) openjtalk_getDicU16(void*openjtal,wchar_t* path);
	bool WINAPI __declspec(dllexport) openjtalk_setVoiceDirU16(void*openjtalk,wchar_t* path);
	wchar_t* WINAPI __declspec(dllexport) openjtalk_getVoiceDirU16(void*openjtalk,wchar_t* path);
	bool WINAPI __declspec(dllexport) openjtalk_setVoiceU16(void*openjtalk,wchar_t* path);
	wchar_t* WINAPI __declspec(dllexport) openjtalk_getVoiceU16(void*openjtalk,wchar_t* path);
	bool WINAPI __declspec(dllexport) openjtalk_setVoicePathU16(void*openjtalk,wchar_t* path);
	wchar_t* WINAPI __declspec(dllexport) openjtalk_getVoicePathU16(void*openjtalk,wchar_t* path);
	bool WINAPI __declspec(dllexport) openjtalk_setVoiceNameU16(void*openjtalk,wchar_t* path);
	wchar_t* WINAPI __declspec(dllexport) openjtalk_getVoiceNameU16(void*openjtalk,wchar_t* path);
	void WINAPI __declspec(dllexport) openjtalk_speakAsyncU16(void*openjtalk,wchar_t* text);
	void WINAPI __declspec(dllexport) openjtalk_speakSyncU16(void*openjtalk,wchar_t* text);
	bool WINAPI __declspec(dllexport) openjtalk_speakToFileU16(void*openjtalk,wchar_t* text, wchar_t* file);
	bool WINAPI __declspec(dllexport) openjtalk_isSpeaking(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_stop(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_wait(void*openjtalk,int duration);
	void WINAPI __declspec(dllexport) openjtalk_waitUntilDone(void*openjtalk);
	void WINAPI __declspec(dllexport) openjtalk_test(void*openjtalk, void*text);