ffi/delphi/Jtalk.pas

unit Jtalk;

interface

uses
  SysUtils, Generics.Collections;

type
  PHtsVoiceFilelist = ^HtsVoiceFilelist;

  HtsVoiceFilelist = record
    succ: PHtsVoiceFilelist;
    path: PAnsiChar;
    name: PAnsiChar;
  end;

{$IFDEF Win64}
function openjtalk_getHTSVoiceListSjis(oj: Pointer): PHtsVoiceFilelist; stdcall; external 'jtalk64.dll';
procedure openjtalk_clearHTSVoiceList(oj: Pointer; list: PHtsVoiceFilelist); stdcall; external 'jtalk64.dll';

function openjtalk_initializeU16(voice: PChar; dic: PChar; voiceDir: PChar): Pointer; stdcall; external 'jtalk64.dll';
procedure openjtalk_clear(oj: Pointer); stdcall; external 'jtalk64.dll';
procedure openjtalk_refresh(oj: Pointer); stdcall; external 'jtalk64.dll';

procedure openjtalk_setSamplingFrequency(oj: Pointer; i: Cardinal); stdcall; external 'jtalk64.dll';
function openjtalk_getSamplingFrequency(oj: Pointer): Cardinal; stdcall; external 'jtalk64.dll';
procedure openjtalk_setFperiod(oj: Pointer; i: Cardinal); stdcall; external 'jtalk64.dll';
function openjtalk_getFperiod(oj: Pointer): Cardinal; stdcall; external 'jtalk64.dll';
procedure openjtalk_setAlpha(oj: Pointer; f: double); stdcall external 'jtalk64.dll';
function openjtalk_getAlpha(oj: Pointer): double; stdcall external 'jtalk64.dll';
procedure openjtalk_setBeta(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getBeta(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setSpeed(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getSpeed(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setAdditionalHalfTone(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getAdditionalHalfTone(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setMsdThreshold(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getMsdThreshold(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setGvWeightForSpectrum(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getGvWeightForSpectrum(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setGvWeightForLogF0(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getGvWeightForLogF0(oj: Pointer): double; stdcall; external 'jtalk64.dll';
procedure openjtalk_setVolume(oj: Pointer; f: double); stdcall; external 'jtalk64.dll';
function openjtalk_getVolume(oj: Pointer): double; stdcall; external 'jtalk64.dll';

function openjtalk_setDicU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk64.dll';
function openjtalk_getDicU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk64.dll';
function openjtalk_setVoiceDirU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk64.dll';
function openjtalk_getVoiceDirU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk64.dll';
function openjtalk_setVoiceU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk64.dll';
function openjtalk_getVoiceU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk64.dll';
function openjtalk_setVoicePathU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk64.dll';
function openjtalk_getVoicePathU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk64.dll';
function openjtalk_setVoiceNameU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk64.dll';
function openjtalk_getVoiceNameU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk64.dll';

procedure openjtalk_speakSyncU16(oj: Pointer; text: PChar); stdcall; external 'jtalk64.dll';
procedure openjtalk_speakAsyncU16(oj: Pointer; text: PChar); stdcall; external 'jtalk64.dll';
procedure openjtalk_stop(oj: Pointer); stdcall; external 'jtalk64.dll';
function openjtalk_isSpeaking(oj: Pointer): Boolean; stdcall; external 'jtalk64.dll';
procedure openjtalk_waitUntilDone(oj: Pointer); stdcall; external 'jtalk64.dll';
procedure openjtalk_wait(oj: Pointer; duration: Integer); stdcall; external 'jtalk64.dll';
function openjtalk_speakToFileU16(oj: Pointer; text: PChar; filename: PChar): Boolean; stdcall; external 'jtalk64.dll';
procedure openjtalk_test(oj: Pointer; text: Pointer); stdcall; external 'jtalk64.dll';
{$ELSE}
function openjtalk_getHTSVoiceListSjis(oj: Pointer): PHtsVoiceFilelist; stdcall; external 'jtalk32.dll';
procedure openjtalk_clearHTSVoiceList(oj: Pointer; list: PHtsVoiceFilelist); stdcall; external 'jtalk32.dll';

function openjtalk_initializeU16(voice: PChar; dic: PChar; voiceDir: PChar): Pointer; stdcall; external 'jtalk32.dll';
procedure openjtalk_clear(oj: Pointer); stdcall; external 'jtalk32.dll';
procedure openjtalk_refresh(oj: Pointer); stdcall; external 'jtalk32.dll';

procedure openjtalk_setSamplingFrequency(oj: Pointer; i: Cardinal); stdcall; external 'jtalk32.dll';
function openjtalk_getSamplingFrequency(oj: Pointer): Cardinal; stdcall; external 'jtalk32.dll';
procedure openjtalk_setFperiod(oj: Pointer; i: Cardinal); stdcall; external 'jtalk32.dll';
function openjtalk_getFperiod(oj: Pointer): Cardinal; stdcall; external 'jtalk32.dll';
procedure openjtalk_setAlpha(oj: Pointer; f: double); stdcall external 'jtalk32.dll';
function openjtalk_getAlpha(oj: Pointer): double; stdcall external 'jtalk32.dll';
procedure openjtalk_setBeta(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getBeta(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setSpeed(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getSpeed(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setAdditionalHalfTone(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getAdditionalHalfTone(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setMsdThreshold(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getMsdThreshold(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setGvWeightForSpectrum(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getGvWeightForSpectrum(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setGvWeightForLogF0(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getGvWeightForLogF0(oj: Pointer): double; stdcall; external 'jtalk32.dll';
procedure openjtalk_setVolume(oj: Pointer; f: double); stdcall; external 'jtalk32.dll';
function openjtalk_getVolume(oj: Pointer): double; stdcall; external 'jtalk32.dll';

function openjtalk_setDicU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk32.dll';
function openjtalk_getDicU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk32.dll';
function openjtalk_setVoiceDirU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk32.dll';
function openjtalk_getVoiceDirU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk32.dll';
function openjtalk_setVoiceU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk32.dll';
function openjtalk_getVoiceU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk32.dll';
function openjtalk_setVoicePathU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk32.dll';
function openjtalk_getVoicePathU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk32.dll';
function openjtalk_setVoiceNameU16(oj: Pointer; path: PChar): Boolean; stdcall; external 'jtalk32.dll';
function openjtalk_getVoiceNameU16(oj: Pointer; path: PChar): PChar; stdcall; external 'jtalk32.dll';

procedure openjtalk_speakSyncU16(oj: Pointer; text: PChar); stdcall; external 'jtalk32.dll';
procedure openjtalk_speakAsyncU16(oj: Pointer; text: PChar); stdcall; external 'jtalk32.dll';
procedure openjtalk_stop(oj: Pointer); stdcall; external 'jtalk32.dll';
function openjtalk_isSpeaking(oj: Pointer): Boolean; stdcall; external 'jtalk32.dll';
procedure openjtalk_waitUntilDone(oj: Pointer); stdcall; external 'jtalk32.dll';
procedure openjtalk_wait(oj: Pointer; duration: Integer); stdcall; external 'jtalk32.dll';
function openjtalk_speakToFileU16(oj: Pointer; text: PChar; filename: PChar): Boolean; stdcall; external 'jtalk32.dll';
procedure openjtalk_test(oj: Pointer; text: Pointer); stdcall; external 'jtalk32.dll';
{$ENDIF}

type
  PVoiceFileInfo = ^VoiceFileInfo;
  VoiceFileInfo = Record
    path: String;
    name: String;
  end;
  TVoiceList = TList<PVoiceFileInfo>;
  TJTalkEvent = procedure of object;
  TPathBuffer = array [0..259] of char;

type
  JTalkTTS = Class(TObject)

  private
    procedure CheckhHandleObject;
    procedure GenerateVoiceList;

  var
    oj: Pointer;
    FCurrentVoice: VoiceFileInfo;
    FVoiceList: TVoiceList;
    FVoiceListChanged: TJTalkEvent;

  private
    procedure SetAdditionalHalfTone(f: double);
    procedure SetAlpha(f: double);
    procedure SetBeta(f: double);
    procedure SetDic(path: String);
    procedure SetFperiod(i: Cardinal);
    procedure SetGvWeightForLogF0(f: double);
    procedure SetGvWeightForSpectrum(f: double);
    procedure SetMsdThreshold(f: double);
    procedure SetSamplingFrequency(i: Cardinal);
    procedure SetSpeed(f: double);
    procedure SetVoice(path: String); overload;
    procedure SetVoice(voice: PVoiceFileInfo); overload;
    procedure SetVoiceName(name: String);
    procedure SetVoicePath(path: String);
    procedure SetVoiceDir(path: String);
    procedure SetVolume(f: double);

    function GetAdditionalHalfTone: double;
    function GetAlpha: double;
    function GetBeta: double;
    function GetDic: String;
    function GetFperiod: Cardinal;
    function GetGvWeightForLogF0: double;
    function GetGvWeightForSpectrum: double;
    function GetMsdThreshold: double;
    function GetSamplingFrequency: Cardinal;
    function GetSpeed: double;
    function GetVoice: PVoiceFileInfo;
    function GetVoiceName: String;
    function GetVoicePath: String;
    function GetVoiceDir: String;
    function GetVolume: double;

    procedure ClearVoiceList;

  public
    constructor Create(voice:String; dic:String; voiceDir:String);
    destructor Destroy; override;

    procedure SpeakAsync(text: String);
    procedure SpeakSync(text: String);
    procedure SpeakToFile(text: String; filename: String);
    procedure Stop;
    procedure Wait(duration: Integer = 0);
    procedure WaitUntilDone;

    function IsSpeaking: Boolean;
